# WinSCPPasswdExtractor

./: .gitignore  LICENCE  README.md  WinSCPPwdDump.py  pyproject.toml  winscp.py
WinSCPPasswdExtractor/: WinSCPPasswdExtractor.py
winscppasswdextractor/: WinSCPPasswdExtractor.py
