[project]
name = "WinSCPPasswdExtractor"
version = "1.1.2"
description = "Extract WinSCP Credentials from any Windows System, winscp config file or recovered user registry hive file"
authors = [{ name = "Alexander Neff", email = "alex99.neff@gmx.de" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.7,<4.0"

[project.urls]
homepage = "https://github.com/NeffIsBack/WinSCPPasswdExtractor"
repository = "https://github.com/NeffIsBack/WinSCPPasswdExtractor"

[project.scripts]
WinSCPPasswdExtractor = "winscppasswdextractor.WinSCPPasswdExtractor:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
registry = "^0.4.2"
